# desktop

./: .drone.yml  resources.qrc
.github/workflows/: windows-build-and-test.yml
cmake/modules/: ECMAddAppIcon.cmake  FileUtils.cmake  GenerateIconsUtils.cmake
src/common/: shellextensionutils.cpp  shellextensionutils.h  syncjournaldb.cpp  syncjournaldb.h  syncjournalfilerecord.h
src/gui/: CMakeLists.txt  ErrorBox.qml  accountsettings.cpp  application.cpp  folder.cpp  folderstatusmodel.cpp  ocsjob.cpp  ocsjob.h  ocssharejob.cpp  ocssharejob.h  owncloudgui.cpp  sharee.h  sharemanager.h  shareusergroupwidget.cpp  shareusergroupwidget.h  shellextensionsserver.cpp  shellextensionsserver.h  systray.cpp  systray.h
src/gui/filedetails/: FileDetailsPage.qml  FileDetailsWindow.qml  ShareDelegate.qml  ShareView.qml  filedetails.cpp  filedetails.h  shareemodel.cpp  shareemodel.h  sharemodel.cpp  sharemodel.h  sortedsharemodel.cpp  sortedsharemodel.h
src/gui/socketapi/: socketapi.cpp  socketapi.h
src/gui/tray/: ActivityActionButton.qml  ActivityItem.qml  ActivityItemActions.qml  ActivityItemContent.qml  ActivityList.qml  CustomButton.qml  NCButtonContents.qml  TextButtonContents.qml  Window.qml  activitydata.cpp  activitylistmodel.cpp  activitylistmodel.h  asyncimageresponse.h
src/libsync/: account.cpp  bulkpropagatorjob.cpp  clientsideencryption.cpp  clientsideencryption.h  discovery.cpp  encryptfolderjob.cpp  lockfilejobs.cpp  owncloudpropagator.cpp  propagatedownload.cpp  propagateremotemkdir.cpp  propagateremotemove.cpp  propagateupload.cpp  propagatorjobs.cpp  syncengine.cpp  syncfileitem.h  syncfilestatustracker.cpp
src/libsync/vfs/cfapi/: cfapiwrapper.cpp  hydrationjob.cpp  vfs_cfapi.cpp
src/libsync/vfs/cfapi/shellext/: CMakeLists.txt  customstateprovider.cpp  customstateprovider.h  customstateprovideripc.cpp  customstateprovideripc.h  dllmain.cpp  ipccommon.cpp
src/libsync/vfs/suffix/: vfs_suffix.cpp
test/: testblacklist.cpp  testcfapishellextensionsipc.cpp  testchunkingng.cpp  testlockfile.cpp  testsynccfapi.cpp  testsyncconflict.cpp  testsyncengine.cpp  testsyncjournaldb.cpp  testsyncvirtualfiles.cpp
theme/Style/: Style.qml
